[tool.poetry]
name = "DemonGodsBot_*1_"
version = "0.1.0"
description = "A small Pokécord clone"
authors = ["ryangeorgejisho22@gamil.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
umongo = "3.0.0b10"
motor = "^2.2.0"
jishaku = "^2.1.0"
dnspython = "^2.0.0"
suntime = "^1.2.5"
geocoder = "^1.38.1"
humanfriendly = "^8.2"
discord-flags = { git = "https://github.com/Ryan900Alok/Flag-Parsing.git" }
durations_nlp = "^1.0.1"
aioredis = "^1.3.1"
uvloop = "^0.15.2"
discord-ext-menus = { git = "https://github.com/DemonGods/discord-ext-menus.git" }
aioredis-lock = "^0.1.0"
discord-ext-menus-views = { git = "https://github.com/Ryan900Alok/discord-ext-menus-views.git" }
expiringdict = "^1.2.1"
"discord.py" = { git = "https://github.com/DemonGods/discord.py.git" }

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
